# arnold

./: .gitignore  README.md
src/: CMakeLists.txt  CMakeSettings.json  CREDITS.txt  FindGDK.cmake  FindSDL2.cmake  LibFindMacros.cmake  archive.sh  bugs.txt  build_notes.txt  clean.bat  clean.sh  install.txt  make_arnz80_debug.sh  make_arnz80_release.sh  make_arnz80_release_clang.sh  make_arnz80_release_embed.sh  make_arnz80_release_embed_clang.sh  make_arnz80_sdl2_debug.sh  make_arnz80_sdl2_release.sh  make_arnz80_sdl2_release_clang.sh  make_arnz80_sdl2_release_embed.sh  make_inkz80_debug.sh  make_inkz80_release.sh  make_inkz80_release_clang.sh  make_inkz80_sdl2_debug.sh  make_inkz80_sdl2_release.sh  make_mac.sh  make_win32_release.sh  makeit.sh  readme.txt  valgrind.sh
src/arngui/: AboutDialog.cpp  AboutDialog.h  ArchiveDialog.cpp  ArchiveDialog.h  ArnZ80Connect.cpp  ArrayOfInts.cpp  AudioSettingsDialog.cpp  AudioSettingsDialog.h  AutoTypeDialog.cpp  AutoTypeDialog.h  BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  CSDDialog.cpp  CSDDialog.h  DebuggerDialog.cpp  DebuggerDialog.h  DefineKeyDialog.cpp  DefineKeyDialog.h  DevicesDialog.cpp  DevicesDialog.h  DriveSettingsDialog.cpp  DriveSettingsDialog.h  DriveStatusDialog.cpp  DriveStatusDialog.h  EmuFileType.cpp  EmuFileType.h  EmuWindow.cpp  EmuWindow.h  ExpansionRomDialog.cpp  ExpansionRomDialog.h  FileFiler.cpp  FileFilter.h  FullScreenDialog.cpp  FullScreenDialog.h  GUIFrame.xrc  GetKeyDialog.cpp  GetKeyDialog.h  GraphicsEditor.cpp  GraphicsEditor.h  (+73 more)
src/arngui/arngui/: arngui.sln  arngui.vcxproj  arngui.vcxproj.filters  arnold.props  clean.sh
src/arngui/arngui/icons/: icons.vcxproj  icons.vcxproj.filters
src/arngui/linux/: Dockerfile  arnold.1  arnold.desktop  docker.sh  install.sh  x-cdt.xml  x-cpr.xml  x-dsk.xml  x-sna.xml  x-tzx.xml
src/arngui/linux/deb/: package.sh
src/arngui/linux/deb/debian/: README.Debian  README.source  changelog  control  copyright  docs
src/arngui/linux/rpm/: arnold.spec
src/arngui/macosx/: Arnold.rsrc  Arnold_Expansion.icns  Info.plist.cmake  PkgInfo  arnold.entitlements  arnold.icns  cartridge.icns  disk.icns  snapshot.icns  tape.icns
src/arngui/pasmo/: asmimpl.cpp  config_version.h
src/arngui/pasmo/pasmolib/: pasmolib.cbp  pasmolib.depend
src/arngui/sdl/: CMakeLists.txt  SDLPlatformSpecific.cpp  SDLPlatformSpecific.h  clean.sh
src/arngui/sdl2/: CMakeLists.txt  SDL2PlatformSpecific.cpp  SDL2PlatformSpecific.h  SDL2PlatformSpecificMac.m  opengl.txt  readme.txt
src/arngui/sdlcommon/: CMakeLists.txt  sound.cpp  sound.h
src/arngui/windows/: arnold.exe.manifest  arnold.iss  resource.rc  version.h  win.cpp
src/arngui/windows/icons/: CMakeLists.txt  icons.cbp  main.cpp  resource.rc
src/cpc/: CMakeLists.txt  aleste.c  aleste.h  amdrum.c  amdrum.h  amram2.c  amram2.h  ams.c  amsdos.c  amsdos.h  amxms.c  amxms.h  arnold.c  arnold.h  asic.c  asic.h  asicdiss.c  ata.c  ata.h  audio.c  audio.h  autoboot.h  autorunfile.c  autorunfile.h  autotype.c  autotype.h  bmp.c  bmp.h  brunword.c  brunword.h  cassette.c  cassette.h  cheatdb.c  cheatdb.h  clean.sh  cpc.c  cpc.h  cpcay.c  cpcay.h  cpcendian.h  (+142 more)
src/cpc/debugger/: CMakeLists.txt  breakpt.c  breakpt.h  clean.sh  dbgitem.c  dissasm.c  dissasm.h  gdebug.c  gdebug.h  item.h  labelset.c  labelset.h  memdump.c  memdump.h  parse.c  parse.h  stack.c  stack.h
src/cpc/diskimage/: CMakeLists.txt  clean.sh  diskimg.c  diskimg.h  dsk.c  dsk.h  extdsk.c  extdsk.h  iextdsk.c  iextdsk.h
src/cpc/z80/: CMakeLists.txt  clean.sh  z80.c  z80.h  z80funcs.h  z80funcs2.h  z80gen.c  z80gen.h  z80macros.h  z80tables.h
src/cpc/z80tools/: CMakeLists.txt  stepOver.c  z80diss.c  z80time.c
src/cross/: FindwxWidgets.cmake  install.sh  make_win32_debug.sh  make_win32_inkz80_debug.sh  make_win32_inkz80_release.sh  make_win32_release.sh  make_win64_debug.sh  make_win64_release.sh  make_x64_debug.sh  make_x64_release.sh  readme.txt  win32-mingw32.cmake  win32-mingw32.cmake.old  win64-mingw32.cmake
src/extras/: plusreg.lst
src/inkz80/: CMakeLists.txt  clean.sh  inkz80.cpp  inkz80.h  inkz80core.h  maketab.lua  tables.cpp  tests.cpp  tests.h  testz80.cpp  testz80.h
src/test/monitor/: GUIDialog.cpp  GUIDialog.h  WxWizDialog.fbp  clean.sh  monitor.cbp  monitor.layout  zzzzz.depend  zzzzz.layout  zzzzzApp.cpp  zzzzzApp.h  zzzzzMain.cpp  zzzzzMain.h
src/test/psg/: psg.cbp  psgApp.cpp  psgApp.h  psgMain.cpp
src/test/psg/psg/: GUIDialog.cpp  clean.sh  psg.cbp  psg.depend  psg.layout  psgApp.cpp  psgApp.h  psgMain.h
src/tools/makez80/: CMakeLists.txt  clean.sh  makez80.c  runme.sh  z80gen.c  z80gen.h  z80make.cbp  z80make.depend  z80make.layout
src/tools/makez80/unused/: gendiss.c
src/tools/makez80/unused/z80make/: gendiss.h  z80.h  z80gen.c  z80make.cbp  z80make.layout
